# oracle-ddl-rag-mcp

./: .gitignore  README.md  pyproject.toml
data/: .gitkeep  manual_overrides.yaml
scripts/: ingest_schema.py
src/oracle_ddl_rag/: __init__.py  config.py  server.py
src/oracle_ddl_rag/embeddings/: __init__.py  embedding_service.py
src/oracle_ddl_rag/extractors/: __init__.py  ddl_extractor.py  enum_extractor.py  relationship_extractor.py
src/oracle_ddl_rag/graph/: __init__.py  table_graph.py
src/oracle_ddl_rag/storage/: __init__.py  chroma_store.py  sqlite_cache.py
src/oracle_ddl_rag/tools/: __init__.py  find_path.py  get_enum.py  get_join.py  get_table.py  search_columns.py  search_schema.py
tests/: __init__.py
